# mkdocs-pdf

./: LICENSE  README.md  pyproject.toml
mkdocs_pdf/: plugin.py
